Fixed popup menu size & Overflowing testimonials

--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,10 +1,9 @@
 .testimonials-main-container {
-width: 100%;
-background-color: #ececec;
-display: flex;
-justify-content: center;
-align-items: center;
-
+  width: 100%;
+  background-color: #ececec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .testimonials-container {
   padding: 60px 0;
@@ -24,7 +23,7 @@ align-items: center;
   padding: 30px;
   border-radius: 20px;
   border: thin darkgrey;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
@@ -77,19 +76,19 @@ align-items: center;
 }
 .testimonial-slider-content > section {
   display: flex;
-    justify-content: center;
-    margin: 35px auto 0;
-    width: 80%;
-    align-items: center;
-  }
-  .testimonial-slider-content > section > section {
-    margin: 0 10px;
-  }
+  justify-content: center;
+  margin: 35px auto 0;
+  width: 80%;
+  align-items: center;
+}
+.testimonial-slider-content > section > section {
+  margin: 0 10px;
+}
 .testimonial-slider-content > section > img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin: 0 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 10px;
 }
 .testimonial-slider-content > section > section > h4 {
   padding-top: 6px;
@@ -102,18 +101,18 @@ align-items: center;
 
 /* MEDIA QUERY */
 @media screen and (max-width: 769px) {
-.testimonial-slider ul.slider {
-  height: 280px;
-}
+  .testimonial-slider ul.slider {
+    max-height: 280px;
+  }
   .testimonial-slider q {
-  font-size: 18px;
-  font-weight: 500;
-  letter-spacing: 0.5pt;
-  text-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  max-width: 90%;
-}
-.testimonial-slider-content > section {
-  display: flex;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0.5pt;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    max-width: 90%;
+  }
+  .testimonial-slider-content > section {
+    display: flex;
     margin: 35px auto 0;
     width: 100%;
     align-items: center;
@@ -121,20 +120,19 @@ align-items: center;
   .testimonial-slider-content > section > section {
     margin: 0 10px;
   }
-.testimonial-slider-content > section > img {
-    width: 120px;
-    height: 120px;
+  .testimonial-slider-content > section > img {
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     margin: 0 10px;
-}
-.testimonial-slider-content > section > section > h4 {
-  padding-top: 6px;
-  color: darkgrey;
-}
-.testimonial-slider .source {
-  color: #1d3e68;
-  font: italic;
-}
+  }
+  .testimonial-slider-content > section > section > h3 {
+    font-size: 16px;
+  }
+  .testimonial-slider-content > section > section > h4 {
+    padding-top: 4px;
+    font-size: 12px;
+  }
 }
 /* MEDIA QUERY */
 /* KEYFRAME DECLARATIONS */
